8303769: [Lilliput] Fix interpreter asymmetric fast-locking

Reviewed-by: stuefe