src/hotspot/cpu/x86/interp_masm_x86.cpp
@@ -1350,7 +1350,9 @@ void InterpreterMacroAssembler::unlock_object(Register lock_reg) {
       get_thread(thread);
 #endif
       // Handle unstructured locking.
-      cmpptr(obj_reg, Address(thread, JavaThread::lock_stack_current_offset()));
+      Register tmp = swap_reg;
+      movptr(tmp, Address(thread, JavaThread::lock_stack_current_offset()));
+      cmpptr(obj_reg, Address(tmp, -oopSize));
       jcc(Assembler::notEqual, slow_case);
       // Try to swing header from locked to unlock.
       movptr(swap_reg, Address(obj_reg, oopDesc::mark_offset_in_bytes()));
